--- a/src/app/tabs/tabs.component.html
+++ b/src/app/tabs/tabs.component.html
@@ -1,11 +1,14 @@
-<ul class="nav nav-tabs">
-  <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="#">All</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Light</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Dark</a>
-  </li>
-</ul>
+<div>
+  <ul class="nav nav-tabs">
+    <li role="presentation" [ngClass]="{active: chosenList === 'all'}">
+      <a (click)="onChoose('all')" style="cursor: pointer">All</a>
+      </li>
+    <li role="presentation" [ngClass]="{active: chosenList === 'light'}">
+      <a (click)="onChoose('light')" style="cursor: pointer">Light</a>
+      </li>
+    <li role="presentation" [ngClass]="{active: chosenList === 'dark'}">
+      <a (click)="onChoose('dark')" style="cursor: pointer">Dark</a>
+      </li>
+  </ul>
+  <app-list [characters]="getCharacters()"></app-list>
+</div>
