--- a/src/app/tabs/tabs.component.html
+++ b/src/app/tabs/tabs.component.html
@@ -1,14 +1,14 @@
 <div>
   <ul class="nav nav-tabs">
-    <li role="presentation" [ngClass]="{active: chosenList === 'all'}">
-      <a (click)="onChoose('all')" style="cursor: pointer">All</a>
+    <li role="presentation">
+      <a routerLink="characters/all" routerLinkActive="active">All</a>
       </li>
-    <li role="presentation" [ngClass]="{active: chosenList === 'light'}">
-      <a (click)="onChoose('light')" style="cursor: pointer">Light</a>
+    <li role="presentation">
+      <a routerLink="characters/light" routerLinkActive="active">Light</a>
       </li>
-    <li role="presentation" [ngClass]="{active: chosenList === 'dark'}">
-      <a (click)="onChoose('dark')" style="cursor: pointer">Dark</a>
+    <li role="presentation">
+      <a routerLink="characters/dark" routerLinkActive="active">Dark</a>
       </li>
   </ul>
-  <app-list [characters]="getCharacters()"></app-list>
+  <router-outlet></router-outlet>
 </div>
